# algol-60-compiler

./: AUTHORS  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  bairstow-f  bairstow-f.alg  bairstow-f.c  bairstow-f.h  config.status  configure  configure.in  configure~  example9.alg  frontend.c  frontend.h  gc  gc.c  jff-algol.c  jff_header.h  jff_header.template  operator  operator_e  operator_f  prelude  prelude_e  prelude_f  runtime.c  test1  test1.alg  test1.h  xxx
.deps/: frontend.Po  gc.Po  jff-algol.Po  runtime.Po
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
doc/: jff-manual.tex
examples/: 003_bairstow2.alg  321  321.alg  321.c  321.h  README  ei.alg  ei.h  example0.alg  example1.alg  example10  example10.alg  example10.c  example10.h  example11  example11.alg  example11.c  example11.h  example11a  example11a.alg  example11a.c  example11a.h  example12.alg  example13.alg  example14.alg  example15.alg  example17.alg  example18  example18.alg  example18.c  example18.h  example19.alg  example2.alg  example20  example20.alg  example20.c  example20.h  example20a.alg  example20b.alg  example21.alg  (+49 more)
