dnl /* configure.in */

dnl Process this file with autoconf to produce a configure script.

AC_INIT(frontend.c)

AM_INIT_AUTOMAKE(jff-a2c, 2.1.4)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_RANLIB

AC_PATH_PROGS(INDENT, indent)

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC

dnl Checks for typedefs.

dnl Checks for structures.

dnl Checks for compiler characteristics.

dnl Checks for library functions.

dnl Checks for system services.

AC_OUTPUT(Makefile)

dnl /* eof */
